<resources>
    <string name="app_name">Bluetooth LE</string>
    <string name="ble_not_supported">BLE is not supported on this device</string>
    <string name="scan">Scan</string>
    <string name="device">Device:</string>
    <string name="device_name">Name</string>
    <string name="device_type">Type:</string>
    <string name="device_type_text">%d</string>
    <string name="address">Address:</string>
    <string name="rev">HW Rev:</string>
    <string name="sw_rev">SW Rev:</string>
</resources>
