<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeviceDataActivity">
    <TextView
        android:id="@+id/deviceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_medium"
        android:textSize="16sp"
        android:text="@string/device"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deviceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/roboto_medium"
        android:textSize="20sp"
        android:text="@string/device_name"
        app:layout_constraintStart_toEndOf="@id/deviceLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_medium"
        android:textSize="16sp"
        android:text="@string/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deviceLabel" />

    <TextView
        android:id="@+id/deviceAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/roboto_medium"
        android:textSize="20sp"
        android:text="@string/device_name"
        app:layout_constraintStart_toEndOf="@id/deviceLabel"
        app:layout_constraintTop_toBottomOf="@id/deviceName" />

    <TextView
        android:id="@+id/revLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_medium"
        android:textSize="16sp"
        android:text="@string/rev"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addressLabel" />

    <TextView
        android:id="@+id/deviceRev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/roboto_medium"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/deviceLabel"
        app:layout_constraintTop_toBottomOf="@id/deviceAddress" />

    <TextView
        android:id="@+id/softLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/sw_rev"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/revLabel" />

    <TextView
        android:id="@+id/deviceSoft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/roboto_medium"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@id/deviceLabel"
        app:layout_constraintTop_toBottomOf="@id/deviceRev" />
</android.support.constraint.ConstraintLayout>